--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,9 @@ go_import_path: github.com/simonswine/aws-nuke
 go:
   - 1.8.x
 
+script:
+  - make verify
+  - make build
+
 after_success:
   - test -n "$TRAVIS_TAG" && curl -sL https://git.io/goreleaser | bash
